5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1734_2506.log
== TEST (2019-05-15 20:09:52) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p
	if(qit<=0):
		print("EXTINCAO")
	elif(qit=12000):
		print("LIMITE")
	a=0
print(a)	
-- ERROR:
File "XXXX", line 10
    elif(qit=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:10:38) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p
	if(qit<=0):
		print("EXTINCAO")
	elif(qit=12000):
		print("LIMITE")
	a=0
print(a)	
-- ERROR:
File "XXXX", line 10
    elif(qit=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:10:43) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p
	if(qit<=0):
		print("EXTINCAO")
	elif(qit=12000):
		print("LIMITE")
	a=0
print(a)	
-- ERROR:
File "XXXX", line 10
    elif(qit=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:11:14) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=0
print(a)	
-- ERROR:
File "XXXX", line 10
    elif(qit=12000):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:11:59) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=0
print(a)	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:12:53) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit<0) and (qit>12000):
	p=qit*pt/100
	qit=qit+p-qrt
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=0
print(a)	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:13:25) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit<0) and (qit>12000):
	p=qit*pt/100
	qit=qit+p-qrt
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=a+1
print(a)	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:13:52) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=a+1
print(a)	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:14:39) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
print(a)	
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:16:08) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
print(a)	
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:16:45) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
	a=a+1
print(a)	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:18:49) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<=12000):
	p=qit*pt/100
	qit=qit+p-qrt
if(qit<=0):
	print("EXTINCAO")
elif(qit==12000):
	print("LIMITE")
	a=a+1
print(a)	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:19:37) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit==12000):
	p=qit*pt/100
	qit=qit+p-qrt
if(qit<=0):
	print("EXTINCAO")
elif(qit==12000):
	print("LIMITE")
	a=a+1
print(a)	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:20:48) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
print(a)
if(qit<=0):
	print("EXTINCAO")
elif(qit==12000):
	print("LIMITE")

-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:22:55) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
print(a)
if(qit<=0):
	print("EXTINCAO")
elif(qit==12000):
	print("LIMITE")

-- OUTPUT:
14
EXTINCAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:23:40) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
	if(qit<=0):
	print("EXTINCAO")
elif(qit==12000):
	print("LIMITE")

print(a)
-- ERROR:
File "XXXX", line 10
    print("EXTINCAO")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:24:15) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
print(a)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:24:36) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
print(a)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:24:38) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
print(a)
-- EXECUTION TIME:
0.142132
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:39:42) 
-- CODE:
qit=int(input("escreva a quantidade de tambaquis: "))
pt=float(input("escreva o percentual de crescimento: "))
qrt=int(input("escreva a quantidade de tambaquis retiradas do tanque: "))
a=0
while(qit>0) and (qit<12000):
	p=qit*pt/100
	qit=qit+p-qrt
	a=a+1
	if(qit<=0):
		print("EXTINCAO")
	elif(qit==12000):
		print("LIMITE")
print(a)
-- EXECUTION TIME:
0.218982
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:39:51) 
-- CODE:
qnt1=int(input("quantidade inicial de tambaquis: "))
pc=int(input("percentual de crescimento: "))
bye=int(input("quantidade de tambaquis retirados para money: "))
por=pc/100
anos=0
while(0<qnt1<=12000):
	qnt1=(qnt1+qnt1*por)-bye
	anos=anos+1
if(qnt1<=0):
		print("EXTINCAO")
		print(anos)
if(qnt1>=12000):
		print("LIMITE")
		print(anos)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:39:54) 
-- CODE:
qnt1=int(input("quantidade inicial de tambaquis: "))
pc=int(input("percentual de crescimento: "))
bye=int(input("quantidade de tambaquis retirados para money: "))
por=pc/100
anos=0
while(0<qnt1<=12000):
	qnt1=(qnt1+qnt1*por)-bye
	anos=anos+1
if(qnt1<=0):
		print("EXTINCAO")
		print(anos)
if(qnt1>=12000):
		print("LIMITE")
		print(anos)
-- EXECUTION TIME:
0.156495
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
